Fix overlapping "Live" and player count

--- a/src/index.css
+++ b/src/index.css
@@ -2260,6 +2260,10 @@
     padding-right: calc(var(--spacing) * 8);
   }
 
+  .pr-24 {
+    padding-right: calc(var(--spacing) * 24);
+  }
+
   .pb-1 {
     padding-bottom: calc(var(--spacing) * 1);
   }
